fix: display of inputs error messages on mobile screens

--- a/src/assets/styles/media.scss
+++ b/src/assets/styles/media.scss
@@ -69,6 +69,18 @@
     .chrome-picker.chrome-picker {
         width: 210px !important;
     }
+    .field__title {
+        flex-direction: column;
+        align-items: flex-start;
+        :not(:last-child) {
+            margin: 0;
+        }
+    }
+    .field__warn,
+    .file__warn {
+        font-size: 13px;
+        padding:  0 0 0 15px;
+    }
 }
 
 @media screen and (max-height: 480px) {
